--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -37,6 +37,7 @@ margin: 0px 150px;
     font-size: 20px;
     border-radius: 10px;
     border: none;
+    
  }
  .banner-content{
     color: #252432;
@@ -77,4 +78,35 @@ margin: 0px 150px;
     display: flex;
     margin: 100px 141px 50px 171px;
     
+ }
+ .main-head{
+    font-weight:bold;
+    font-size: 38px;
+    text-align: center;
+ }
+ .all-three{
+    font-weight: bold;
+    font-size: 80px;
+    color: #4E47FF;
+    width: 130px;
+    height: 50px;
+ }
+ .three-para{
+    color: #000000;
+    font-weight: 400;
+    font-size: 20px;
+
+ }
+ .star-container{
+    display: flex;
+    justify-content: center;
+    gap: 150px;
+    margin: 0px;
+ }
+ .cannect{
+    max-width: 1000px;
+    margin: 100px auto;
+    text-align: center;
+    background-color: #cbcaeb;
+    border-radius: 24px;
  }
